[package]
name = "rust-solana-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.0.15", features = ["cargo"] }

tiny-bip39 = "0.8.2"
solana-sdk = "1.14.5"
solana-client = "1.10.0"
ticker = "0.1.1"